# Verbilo

./: .doc_translator_gui.json  .gitignore  .verbilo_gui.json  COMMIT_MESSAGE.txt  README.md  build-windows.yml  old_README.md  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
scripts/: build_nuitka.py  download_models.py  preconvert_ct2.py  upload_models_hf.py
src/: __init__.py  cli.py  gui_config.py  gui_customtk.py  gui_helpers.py  gui_theme.py  icons.py  launch.py  main.py
src/converters/: __init__.py  pdf_converter.py
src/doc_translator/: __init__.py  cli.py  gui_config.py  gui_customtk.py  gui_helpers.py  main.py
src/doc_translator/converters/: docx_converter.py  pdf_converter.py  xlsx_converter.py
src/doc_translator/translators/: base.py  dummy.py  google.py
src/doc_translator/utils/: io.py
src/translators/: __init__.py  google.py
src/utils/: __init__.py
src/verbilo/: __init__.py  cli.py  main.py
src/verbilo/advisors/: __init__.py  base.py  null.py  ollama.py
src/verbilo/assets/: __init__.py  models_catalogue.json
src/verbilo/assets/locales/: ui_en.json  ui_zh_hans.json
src/verbilo/converters/: docx_converter.py  pdf_converter.py  xlsx_converter.py
src/verbilo/gui/: app.py  config.py  helpers.py  i18n.py  icons.py  theme.py
src/verbilo/translators/: azure.py  baidu.py  base.py  cache.py  deepl.py  dummy.py  factory.py  google.py  http_session.py  lang_detect.py  local.py  ollama.py  usage.py
src/verbilo/utils/: __init__.py  io.py
tests/: test.xlsx  test_gui_i18n.py  test_pdf_fit.py
