[tool.poetry]
name = "verbilo"
version = "1.8.2"
build_date = "2026-03-10"
description = "Translate .docx, .pdf, .xlsx, .xls files while preserving formatting."
authors = ["crt_ (8041q)"]
packages = [{ include = "verbilo", from = "src" }]
include = [
    { path = "src/verbilo/assets/**/*", format = ["wheel", "sdist"] },
    { path = "models/**/*", format = ["wheel", "sdist"] }
]

[tool.poetry.scripts]
verbilo = "verbilo.cli:main"

[tool.poetry.dependencies]
python = "^3.12.10"
pytablericons = ">=1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
