[tool.poetry]
name = "verbilo"
version = "1.9.3"
build_date = "2026-03-12"
description = "Translate .docx, .pdf, .xlsx, .xls files while preserving formatting."
authors = ["crt_ (8041q)"]
packages = [{ include = "verbilo", from = "src" }]
include = [
    { path = "src/verbilo/assets/**/*", format = ["wheel", "sdist"] },
    { path = "models/**/*", format = ["wheel", "sdist"] }
]
license-file = "LICENSE"
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/8041q/Verbilo"
homepage = "https://github.com/8041q/Verbilo"

[tool.poetry.scripts]
verbilo = "verbilo.cli:main"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

# Document converters
python-docx = "==0.8.11"
openpyxl = "==3.1.2"

# PDF
PyMuPDF = "==1.27.2"
pymupdf-fonts = "==1.0.5"

# Translation
deep-translator = "==1.11.4"

# Language detection
lingua-language-detector = "==2.1.1"
fast-langdetect = "==1.0.0"

# GUI / theme
customtkinter = "==5.2.2"
pytablericons = "==1.0.1"

# System / runtime
platformdirs = "==4.9.4"
tomli = "==2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
nuitka = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
